# arepytools

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
arepytools/: __init__.py  _utils.py  constants.py
arepytools/geometry/: _geodetic.py  _interpolator.py  anx_time.py  attitude_utils.py  conversions.py  curve.py  curve_protocols.py  direct_geocoding.py  ellipsoid.py  generalsarattitude.py  generalsarorbit.py  geometric_functions.py  inverse_geocoding.py  inverse_geocoding_core.py  orbit.py  reference_frames.py  rotation.py  wgs84.py
arepytools/io/: __init__.py  channel.py  channel_iteration.py  create_orbit.py  debugio.py  io_support.py  manifest.py  metadata.py  point_target_binary.py  point_target_file.py  productfolder.py  productfolder2.py  productfolder_layout.py
arepytools/io/parsing/: __init__.py  metadata_parsing.py  parsing.py  translate.py
arepytools/io/parsing/metadata_models/: __init__.py  aresys_generic_metadata.py  aresys_types.py
arepytools/io/point_target_models/: __init__.py  aresys_point_target_models.py
arepytools/math/: axis.py  genericpoly.py
arepytools/timing/: conversions.py  precisedatetime.py
docs/source/: changelog.rst  conf.py  index.rst  install.rst
docs/source/_static/css/: custom.css
docs/source/reference/api/: geometry.rst  index.rst  io.rst  math.rst  others.rst  timing.rst
docs/source/user_manual/: index.rst  input_output_module.rst  new_code.txt  new_code_orb.txt  new_orbit_and_anx.rst  old_code.txt  old_code_orb.txt
docs/source/user_manual/quickstart/: index.rst  qs_general_sar_orbit.ipynb  qs_generic_poly.ipynb  qs_interpolated_orbit.ipynb  qs_precise_date_time.ipynb  qs_write_and_read_product_folder.ipynb
tests/: __init__.py
tests/geometry/: __init__.py  test_anx_time.py  test_attitude_utils.py  test_conversions.py  test_curve.py  test_direct_geocoding_attitude.py  test_direct_geocoding_bistatic.py  test_direct_geocoding_monostatic.py  test_direct_geocoding_with_looks.py  test_ellipsoid.py  test_generalsarattitude.py  test_generalsarorbit.py  test_geodetic.py  test_geometric_functions.py  test_inverse_geocoding_attitude.py  test_inverse_geocoding_bistatic.py  test_inverse_geocoding_monostatic.py  test_orbit.py  test_reference_frames.py  test_rotation.py
tests/io_/: __init__.py  test_channel.py  test_channel_iteration.py  test_io_support.py  test_manifest.py  test_point_target_binary.py  test_point_target_file.py  test_product_folder_layout.py  test_productfolder.py  test_productfolder2.py
tests/io_/parsing/: __init__.py  test_metadata_parsing.py  test_translate.py
tests/math_/: __init__.py  test_axis.py  test_generic_poly.py
tests/timing/: __init__.py  test_conversions.py  test_precisedatetime.py
