[build-system]
requires = ["setuptools>=61.2"]
build-backend = "setuptools.build_meta"

[project]
name = "arepytools"
description = "ArePyTools is the Aresys Python toolset for SAR data processing."
authors = [{ name = "Aresys S.R.L.", email = "info@aresys.it" }]
license = { text = "MIT" }
classifiers = [
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
]
requires-python = ">= 3.9"
dependencies = ["xsdata", "lxml", "python-dateutil", "scipy", "numpy<2"]
dynamic = ["version"]

[project.optional-dependencies]
dev = ['black', 'isort', 'pylint']
doc = [
    "ipython",
    "nbsphinx",
    "sphinx",
    "sphinx-design",
    "sphinx-copybutton",
    "pydata-sphinx-theme",
]

[project.readme]
file = "README.md"
content-type = "text/markdown"

[tool.setuptools]
license-files = ["LICENSE.txt"]
include-package-data = false

[tool.setuptools.packages.find]
exclude = ["tests", "tests*"]
namespaces = false

[tool.setuptools.dynamic]
version = { attr = "arepytools.__version__" }

[tool.pylint.MASTER]
extension-pkg-allow-list = "lxml"
ignore = [
    "aresys_types.py",
    "aresys_generic_metadata.py",
    "aresys_point_target_models.py",
    "channel.py",
    "productfolder.py",
    "wgs84.py",
]
fail-under = 8.0

[tool.pylint.FORMAT]
max-line-length = 120

[tool.black]
line-length = 88
target-version = ["py39", "py310", "py311", "py312"]

[tool.isort]
profile = "black"
